--- a/src/app/pages/idmpage/idmpage.component.html
+++ b/src/app/pages/idmpage/idmpage.component.html
@@ -7,6 +7,6 @@
     </svg>
     <h1>{{"Please Don't use IDM Extension to be able to use this website" | translate}}</h1>
     <img src="../../../assets/images/logo.png" class="logo" alt="">
-    <h4>Sorry your account is blocked if you want to unblock it <a href="">Contact Us</a></h4>
+    <h4>{{"Sorry your account is blocked if you want to unblock it "|translate}}<a href="">{{"Contact Us"|translate}}</a></h4>
   </div>
 </div>
