--- a/src/app/pages/admin/restricted-users/restricted-users.component.html
+++ b/src/app/pages/admin/restricted-users/restricted-users.component.html
@@ -5,71 +5,82 @@
               <h2 class="st_title"><i class="restricted"></i>{{"Restricted users" | translate}}</h2>
           </div>
       </div>
-      <form class="row" [formGroup]="search">
+      <form class="row" >
         <div class="col-xl-4 col-md-4 col-sm-6 ">
             <div class="ui search focus mt-30">
                 <div class="ui left icon input swdh11 swdh19">
-                    <input #search  class="prompt srch_explore" type="text"
+                    <input #search  #dp="bsDatepicker"
+                    bsDatepicker
+                    [bsValue]="bsValue" class="prompt srch_explore" type="text"
                         name="Search " value="" id="id_Search" required=""
                         placeholder="{{'Search ' | translate}}">
-                        <div class="search-field">
-                          <!-- <label>Search By</label> -->
+                        <div class="btn-group searchField"  dropdown [autoClose]="false" container="body">
+                          <button id="button-nested" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
+                                  aria-controls="dropdown-nested">
+                          {{"Search By"|translate}} <span class="caret"></span>
+                          </button>
+                          <ul id="dropdown-nested" *dropdownMenu class="dropdown-menu"
+                              role="menu" aria-labelledby="button-nested">
+                            <li role="menuitem" class="drop">
+                              <div class="checkbox">
+                              <label><input type="checkbox" value="firstName">FirstName</label>
+                            </div>
+                          </li>
+                            <li role="menuitem" class="drop">
+                              <div class="checkbox">
+                              <label><input type="checkbox" value="lastName">LastName</label>
+                            </div>
+                          </li>
+                            <li role="menuitem" class="drop">
+                              <div class="checkbox">
+                              <label><input type="checkbox" value="mobile">Mobile Number</label>
+                            </div>
+                          </li>
+                            <li role="menuitem" class="drop">
+                              <div class="checkbox">
+                              <label><input type="checkbox" value="email">Email</label>
+                            </div>
+                          </li>
 
-                          <select class="form-control selectpicker" placeholder="Search By" name="search_by">
-                              <option selected="" disabled>{{"Search By"|translate}}</option>
-                              <option value="firstName">{{"First Name"|translate}}</option>
-                              <option value="lastName">{{"Last Name"|translate}}</option>
-                              <option value="mobile">{{"Mobile Number"|translate}}</option>
-                              <option value="email">{{"Email"|translate}}</option>
-                              <option value="advanced">{{"Advanced Search"|translate}}</option>
-                              <!-- <option value="course">{{"Course Name"|translate}}</option>
-                              <option value="chapter">{{"Chapter Name"|translate}}</option>
-                              <option value="instrouctor">{{"Instructor Name"|translate}}</option>
-                              <option value="email">{{"Email"|translate}}</option> -->
-                          </select>
+                            <li role="menuitem" dropdown triggers="mouseover" placement="right" container="body" class="drop">
+                              <a dropdownToggle class="dropdown-item dropdown-toggle"
+                                 (click)="false">{{"Course Name"}} <span class="caret"></span></a>
+                              <ul *dropdownMenu class="dropdown-menu" role="menu">
+                                <li role="menuitem"><a class="dropdown-item">Action</a></li>
+                                <li role="menuitem"><a class="dropdown-item">Action1</a></li>
+                                <li role="menuitem"><a class="dropdown-item">Action2</a></li>
+                              </ul>
+                            </li>
 
-                      </div>
+                            <li role="menuitem" dropdown triggers="mouseover" placement="right" container="body" class="drop">
+                              <a dropdownToggle class="dropdown-item dropdown-toggle"
+                                 (click)="false">{{"Chapter Name"}}<span class="caret"></span></a>
+                              <ul *dropdownMenu class="dropdown-menu" role="menu">
+                                <li role="menuitem"><a class="dropdown-item">Action</a></li>
+                                <li role="menuitem"><a class="dropdown-item">Action1</a></li>
+                                <li role="menuitem"><a class="dropdown-item">Action2</a></li>
+                              </ul>
+                            </li>
+                            <li role="menuitem" dropdown triggers="mouseover" placement="right" container="body" class="drop">
+                              <a dropdownToggle class="dropdown-item dropdown-toggle"
+                                 (click)="false">{{"instructor Name"}}<span class="caret"></span></a>
+                              <ul *dropdownMenu class="dropdown-menu" role="menu">
+                                <li role="menuitem"><a class="dropdown-item" href="#/dropdowns#nested-dropdowns">Action</a></li>
+                                <li role="menuitem"><a class="dropdown-item" href="#/dropdowns#nested-dropdowns">Action1</a></li>
+                                <li role="menuitem"><a class="dropdown-item" href="#/dropdowns#nested-dropdowns">Action2</a></li>
+                              </ul>
+                            </li>
 
+                            <li role="menuitem" (click)="dp.toggle()" [attr.aria-expanded]="dp.isOpen" class="drop" ><a class="dropdown-item" >{{"Date"|translate}}</a></li>
+
+                          </ul>
+                        </div>
                       </div>
             </div>
           </div>
 
 
 
-          <div class="btn-group" dropdown [autoClose]="false" container="body">
-            <button id="button-nested" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
-                    aria-controls="dropdown-nested">
-              This dropdown has nested submenu <span class="caret"></span>
-            </button>
-            <ul id="dropdown-nested" *dropdownMenu class="dropdown-menu"
-                role="menu" aria-labelledby="button-nested">
-              <li role="menuitem"><a class="dropdown-item" href="#/dropdowns#nested-dropdowns">Action</a></li>
-
-              <li role="menuitem" dropdown triggers="mouseover" placement="right" container="body">
-                <a dropdownToggle class="dropdown-item dropdown-toggle"
-                   (click)="false">Hover me for nested dropdown <span class="caret"></span></a>
-                <ul *dropdownMenu class="dropdown-menu" role="menu">
-                  <li role="menuitem"><a class="dropdown-item" href="#/dropdowns#nested-dropdowns">Action</a></li>
-                  <li role="menuitem"><a class="dropdown-item" href="#/dropdowns#nested-dropdowns">Action1</a></li>
-                  <li role="menuitem"><a class="dropdown-item" href="#/dropdowns#nested-dropdowns">Action2</a></li>
-                </ul>
-              </li>
-
-              <li role="menuitem" dropdown triggers="mouseover" placement="right" container="body">
-                <a dropdownToggle class="dropdown-item dropdown-toggle"
-                   (click)="false">Hover me for nested dropdown <span class="caret"></span></a>
-                <ul *dropdownMenu class="dropdown-menu" role="menu">
-                  <li role="menuitem"><a class="dropdown-item" href="#/dropdowns#nested-dropdowns">Action</a></li>
-                  <li role="menuitem"><a class="dropdown-item" href="#/dropdowns#nested-dropdowns">Action1</a></li>
-                  <li role="menuitem"><a class="dropdown-item" href="#/dropdowns#nested-dropdowns">Action2</a></li>
-                </ul>
-              </li>
-
-              <li role="menuitem"><a class="dropdown-item" href="#/dropdowns#nested-dropdowns">Something else here</a></li>
-              <li class="divider dropdown-divider"></li>
-              <li role="menuitem"><a class="dropdown-item" href="#/dropdowns#nested-dropdowns">Separated link</a></li>
-            </ul>
-          </div>
 
 
 
