--- a/src/app/pages/instructor/instructor-courses/instructor-courses.component.html
+++ b/src/app/pages/instructor/instructor-courses/instructor-courses.component.html
@@ -1,11 +1,11 @@
 	<!-- Body Start -->
 	<!-- <div class="wrapper"> -->
 		<div class="sa4d25">
-			<div class="container-fluid">			
+			<div class="container-fluid">
 				<div class="row">
-					<div class="col-lg-12">	
+					<div class="col-lg-12">
 						<h2 class="st_title"><i class="uil uil-book-alt"></i>{{"Courses" | translate}}</h2>
-					</div>				
+					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
@@ -45,26 +45,31 @@
 											<a (click)="onEditClick(course)" title="Edit" class="gray-s"><i class="uil uil-edit-alt"></i></a>
 											<a (click)="ocDeleteClick(course)" title="Delete" class="gray-s"><i class="uil uil-trash-alt"></i></a>
 											<a (click)="ocViewCourseClick(course)" title="View" class="gray-s"><i class="uil uil-eye"></i></a>
-										</td>
+                      <label class="switch">
+                        <input type="checkbox" checked>
+                        <span class="slider round"></span>
+                      </label>
+
+                    </td>
 									</tr>
-								
+
 								</tbody>
 							</table>
 						</div>
 						<ngx-loading [show]="loading"></ngx-loading>
-						
+
 					</div>
 				</div>
 			</div>
 		</div>
-	
-		
-		
+
+
+
 	<!-- </div> -->
 	<!-- Body End -->
 
 
-<!-- 	
+<!--
 <ng-template #customLoadingTemplate>
 	<div class="uploadingTemplate">
 	  <h3>
