--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,3 +58,9 @@ h4 {
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+.disabled{
+    background-color: rgb(214, 212, 212);
+    cursor: not-allowed !important;
+    pointer-events: none !important;
+}
