--- a/src/app/pages/user/user-study-course/user-study-course.component.html
+++ b/src/app/pages/user/user-study-course/user-study-course.component.html
@@ -12,6 +12,7 @@
     <span class="collapse_menu--label"></span>
 </button>
 <!-- Left Sidebar Start -->
+<!-- <nav class="vertical_nav chapter-list "> -->
 <nav class="vertical_nav chapter-list vertical_nav__minify">
     <div class="left_section menu_left" id="js-menu">
         <h4 class=header>{{"Table of content" | translate}}<a class="right"><i [routerLink]="['/user/dashboard']"
