--- a/src/app/pages/user/user-view-course/user-view-course.component.html
+++ b/src/app/pages/user/user-view-course/user-view-course.component.html
@@ -42,9 +42,9 @@
                             </div>
                             <div class="_215b06">
                                 <div class="_215b07">
-                                    <a class="crse-cate" *ngIf="course.level === '1'">{{"1st" | translate}}</a>
-                                    <a class="crse-cate" *ngIf="course.level === '2'">{{"2nd" | translate}}</a>
-                                    <a class="crse-cate" *ngIf="course.level === '3'">{{"3rd" | translate}}</a>
+                                    <a class="crse-cate" *ngIf="course?.level == '1'">{{"1st" | translate}}</a>
+                                    <a class="crse-cate" *ngIf="course?.level == '2'">{{"2nd" | translate}}</a>
+                                    <a class="crse-cate" *ngIf="course?.level == '3'">{{"3rd" | translate}}</a>
                                 </div>
                             </div>
                             <div class="_215b05">
