restricted users admin

--- a/src/app/pages/admin/components/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/pages/admin/components/admin-sidebar/admin-sidebar.component.html
@@ -170,12 +170,12 @@
                         <span class="menu--label">{{"Restricted Users" | translate}}</span>
                     </a>
                 </li>
-                <li class="menu--item" (click)="close()">
+                <!-- <li class="menu--item" (click)="close()">
                     <a [routerLink]="['advancedSearch']" routerLinkActive="active"  class="menu--link" title="restricted user">
                         <i class="uil uil-money-withdrawal menu--icon"></i>
                         <span class="menu--label">{{"Advanced Search" | translate}}</span>
                     </a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
