--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -23,7 +23,7 @@
                 <a  class="dropdown-item">{{"math" | translate}}</a></div>
             </li> -->
             <!-- Link-->
-            <li class="nav-item"> <a #home [routerLink]="['/Home']" routerLinkActive="router-link-active"
+            <!-- <li class="nav-item"> <a #home [routerLink]="['/Home']" routerLinkActive="router-link-active"
                 class="nav-link">{{"Home" | translate}}</a></li>
 
             <li class="nav-item"> <a #course [routerLink]="['/Courses']" routerLinkActive="router-link-active"
@@ -36,7 +36,7 @@
                 class="nav-link">{{"Why us" | translate}}</a></li>
 
             <li class="nav-item"> <a [routerLink]="['/mission']" routerLinkActive="router-link-active"
-                class="nav-link">{{"Mission / Vision" | translate}}</a></li>
+                class="nav-link">{{"Mission / Vision" | translate}}</a></li> -->
 
             <li class="nav-item"> <a [routerLink]="['/contactUs']" routerLinkActive="router-link-active"
                 class="nav-link">{{"Contact Us" | translate}}</a></li>
@@ -107,7 +107,7 @@
     </section>
   </div>
 
-    <section class="sectionOfCourses" id="course">
+    <!-- <section class="sectionOfCourses" id="course">
       <h4>{{"Latest Courses"|translate}}</h4>
       <a>{{"All Courses"|translate}}</a>
       <div class="row content">
@@ -120,8 +120,7 @@
           </div>
           <div class="card-footer">
             <small class="text-muted">{{"Mohamed Ahmed"}}</small>
-            <!-- <a>120</a>
-            <a>Add </a> -->
+        
           </div>
         </div>
       </div>
@@ -207,7 +206,7 @@
 
 
       </div>
-    </section>
+    </section> -->
 
 
 
