--- a/src/app/pages/admin/restricted-users/restricted-users.component.html
+++ b/src/app/pages/admin/restricted-users/restricted-users.component.html
@@ -5,12 +5,12 @@
         <h2 class="st_title"><i class="restricted"></i>{{"Restricted users" | translate}}</h2>
       </div>
     </div>
-    <form class="row">
+    <!-- <form class="row">
       <div class="col-xl-4 col-md-4 col-sm-6 ">
         <div class="ui search focus mt-30">
           <div class="ui left icon input swdh11 swdh19">
             <input #search class="prompt srch_explore" type="text" name="Search " value="" id="id_Search" required=""
-              placeholder="{{'Search ' | translate}}">
+              placeholder="{{'Search ' | translate}}"> -->
             <!-- <div class="btn-group searchField"  dropdown [autoClose]="false" container="body">
                           <button id="button-nested" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
                                   aria-controls="dropdown-nested">
@@ -72,7 +72,9 @@
 
                           </ul>
                         </div> -->
-            <div class="btn-group searchField" dropdown (click)="displaySearchSeaction()" [autoClose]="false"
+
+                        
+            <!-- <div class="btn-group searchField" dropdown (click)="displaySearchSeaction()" [autoClose]="false"
               container="body">
               <button id="button-nested" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
                 aria-controls="dropdown-nested">
@@ -101,7 +103,7 @@
       <div class="col-xl-2 col-md-4 col-sm-6 ">
         <button class="login-btn">{{"Refresh table" |translate}}</button>
       </div>
-    </form>
+    </form> -->
 
     <div class="searchSection shoow">
       <form>
@@ -173,7 +175,8 @@
       </form>
     </div>
 
-    <div class="row" infiniteScroll [infiniteScrollDistance]="1">
+    <div class="row" infiniteScroll [infiniteScrollDistance]="1" (scrolled)="onScroll()"
+    [infiniteScrollDisabled]="lastPage || disableScroll">
       <div class="col-md-12">
         <div class="table-responsive mt-30">
           <table class="table ucp-table">
@@ -188,24 +191,34 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td class="text-center">{{1}}</td>
-                <td>{{"mohamed ahmed"|translate}}</td>
-                <td class="text-center">{{"0111107715"|translate}}</td>
-                <td class="text-center">{{"abdelrahm.osama.awad500@gmail.com	"|translate}}</td>
+              <tr *ngFor="let user of restrictedUsersArray; let i = index">
+                <td class="text-center">{{i + 1}}</td>
+                <td>{{user.first_name + ' ' + user.last_name}}</td>
+                <td class="text-center">{{user.mobile_no}}</td>
+                <td class="text-center">{{user.email}}</td>
 
                 <td class="text-center">
-                  <a title="block" class="reject-btn  mx-2"><i class="uil uil-times"></i>{{"block" | translate}}</a>
-                  <a>or</a>
+                  <!-- <a title="block" class="reject-btn  mx-2"><i class="uil uil-times"></i>{{"block" | translate}}</a> -->
+                  <!-- <a>or</a> -->
                   <!-- </td> -->
                   <!-- <td class="text-center"> -->
-                  <a title="Unblock" class="accept-btn mx-2"><i class="uil uil-check"></i>{{"Unblock" | translate}}</a>
+                  <a (click)="onUnlockClick(user.user_id)" title="Unblock" class="accept-btn mx-2"><i class="uil uil-check"></i>{{"Unblock" | translate}}</a>
                 </td>
               </tr>
 
 
             </tbody>
           </table>
+          <p *ngIf="!restrictedUsersArray.length && !loading">{{"No result found" | translate}}</p>
+          <div *ngIf="loading" class="col-md-12">
+              <div class="main-loader mt-20">
+                  <div class="spinner">
+                      <div class="bounce1"></div>
+                      <div class="bounce2"></div>
+                      <div class="bounce3"></div>
+                  </div>
+              </div>
+          </div>
           <!-- <div *ngIf="loading" class="col-md-12">
                       <div class="main-loader mt-20">
                           <div class="spinner">
